[FEATURE] Make sure the top navigation bar is always visible

--- a/Resources/Public/StyleSheet/vidi.css
+++ b/Resources/Public/StyleSheet/vidi.css
@@ -102,6 +102,10 @@ table {
 	background-color: #FFF;
 }
 
+.navbar-fixed-top {
+	z-index: 100000;
+}
+
 .navbar-typo3-top {
 	background-color: #585858;
 	height: 27px;
